[package]
name = "spdbify"
version = "0.1.0"
authors = ["amsesk <amsesk@umich.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"

[dependencies.biorust]
git = "https://github.com/amsesk/biorust"
branch = "master"
